learn/kubernetes/Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: 80bd0993ec364eb8ee08149fc4c70cc2db5ee4d9bb4f44efd9da49bd14290ac7
    cni.projectcalico.org/podIP: 10.40.216.75/32
    cni.projectcalico.org/podIPs: 10.40.216.75/32
    kubectl.kubernetes.io/default-container: nvidia-driver-ctr
  creationTimestamp: "2026-06-19T11:58:49Z"
  generateName: nvidia-driver-daemonset-
  generation: 1
  labels:
    app: nvidia-driver-daemonset
    app.kubernetes.io/component: nvidia-driver
    app.kubernetes.io/managed-by: gpu-operator
    controller-revision-hash: 74959c7d65
    helm.sh/chart: gpu-operator-v26.3.2
    nvidia.com/precompiled: "false"
    pod-template-generation: "1"
  name: nvidia-driver-daemonset-5lk9f
  namespace: gpu-operator
  ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: DaemonSet
      name: nvidia-driver-daemonset
      uid: 46a8d05f-31f2-46cd-89d4-e509d232043e
  resourceVersion: "1918592"
  uid: 064532d5-43dc-4611-a81f-f8f0451850c5
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchFields:
              - key: metadata.name
                operator: In
                values:
                  - ubuntu-mass
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
              - key: app.kubernetes.io/component
                operator: In
                values:
                  - nvidia-driver
          topologyKey: kubernetes.io/hostname
  containers:
    - args:
        - init
      command:
        - nvidia-driver
      env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: NODE_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.hostIP
        - name: KERNEL_MODULE_TYPE
          value: auto
        - name: DRIVER_CONFIG_DIGEST
          value: "3978277121"
      image: nvcr.io/nvidia/lanzhiwang/nvidia-driver:580.126.20-ubuntu22.04
      imagePullPolicy: IfNotPresent
      lifecycle:
        preStop:
          exec:
            command:
              - /bin/sh
              - -c
              - rm -f /run/nvidia/validations/.driver-ctr-ready
      name: nvidia-driver-ctr
      resources: {}
      securityContext:
        privileged: true
        seLinuxOptions:
          level: s0
      startupProbe:
        exec:
          command:
            - sh
            - /usr/local/bin/startup-probe.sh
        failureThreshold: 120
        initialDelaySeconds: 60
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 60
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - mountPath: /run/nvidia
          mountPropagation: Bidirectional
          name: run-nvidia
        - mountPath: /run/nvidia-fabricmanager
          name: run-nvidia-fabricmanager
        - mountPath: /run/nvidia-topologyd
          name: run-nvidia-topologyd
        - mountPath: /var/log
          name: var-log
        - mountPath: /dev/log
          name: dev-log
        - mountPath: /host-etc/os-release
          name: host-os-release
          readOnly: true
        - mountPath: /run/mellanox/drivers/usr/src
          mountPropagation: HostToContainer
          name: mlnx-ofed-usr-src
        - mountPath: /run/mellanox/drivers
          mountPropagation: HostToContainer
          name: run-mellanox-drivers
        - mountPath: /sys/devices/system/memory/auto_online_blocks
          name: sysfs-memory-online
        - mountPath: /sys/module/firmware_class/parameters/path
          name: firmware-search-path
        - mountPath: /lib/firmware
          name: nv-firmware
        - mountPath: /usr/local/bin/startup-probe.sh
          name: driver-startup-probe-script
          subPath: startup-probe.sh
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-492bt
          readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  hostPID: true
  initContainers:
    - args:
        - uninstall_driver
      command:
        - driver-manager
      env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: NVIDIA_VISIBLE_DEVICES
          value: void
        - name: ENABLE_GPU_POD_EVICTION
          value: "true"
        - name: ENABLE_AUTO_DRAIN
          value: "false"
        - name: DRAIN_USE_FORCE
          value: "false"
        - name: DRAIN_POD_SELECTOR_LABEL
        - name: DRAIN_TIMEOUT_SECONDS
          value: 0s
        - name: DRAIN_DELETE_EMPTYDIR_DATA
          value: "false"
        - name: OPERATOR_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: DRIVER_CONFIG_DIGEST
          value: "3978277121"
      image: nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.11.0
      imagePullPolicy: IfNotPresent
      name: k8s-driver-manager
      resources: {}
      securityContext:
        privileged: true
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - mountPath: /run/nvidia
          mountPropagation: Bidirectional
          name: run-nvidia
        - mountPath: /host
          mountPropagation: HostToContainer
          name: host-root
          readOnly: true
        - mountPath: /sys
          name: host-sys
        - mountPath: /run/mellanox/drivers
          mountPropagation: HostToContainer
          name: run-mellanox-drivers
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-492bt
          readOnly: true
  nodeName: ubuntu-mass
  nodeSelector:
    nvidia.com/gpu.deploy.driver: "true"
  preemptionPolicy: PreemptLowerPriority
  priority: 2000001000
  priorityClassName: system-node-critical
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: nvidia-driver
  serviceAccountName: nvidia-driver
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoSchedule
      key: nvidia.com/gpu
      operator: Exists
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/disk-pressure
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/pid-pressure
      operator: Exists
    - effect: NoSchedule
      key: node.kubernetes.io/unschedulable
      operator: Exists
  volumes:
    - hostPath:
        path: /run/nvidia
        type: DirectoryOrCreate
      name: run-nvidia
    - hostPath:
        path: /var/log
        type: ""
      name: var-log
    - hostPath:
        path: /dev/log
        type: ""
      name: dev-log
    - hostPath:
        path: /etc/os-release
        type: ""
      name: host-os-release
    - hostPath:
        path: /run/nvidia-fabricmanager
        type: DirectoryOrCreate
      name: run-nvidia-fabricmanager
    - hostPath:
        path: /run/nvidia-topologyd
        type: DirectoryOrCreate
      name: run-nvidia-topologyd
    - hostPath:
        path: /run/mellanox/drivers/usr/src
        type: DirectoryOrCreate
      name: mlnx-ofed-usr-src
    - hostPath:
        path: /run/mellanox/drivers
        type: DirectoryOrCreate
      name: run-mellanox-drivers
    - hostPath:
        path: /run/nvidia/validations
        type: DirectoryOrCreate
      name: run-nvidia-validations
    - hostPath:
        path: /
        type: ""
      name: host-root
    - hostPath:
        path: /sys
        type: Directory
      name: host-sys
    - hostPath:
        path: /sys/module/firmware_class/parameters/path
        type: ""
      name: firmware-search-path
    - hostPath:
        path: /sys/devices/system/memory/auto_online_blocks
        type: ""
      name: sysfs-memory-online
    - hostPath:
        path: /run/nvidia/driver/lib/firmware
        type: DirectoryOrCreate
      name: nv-firmware
    - configMap:
        defaultMode: 493
        name: nvidia-driver-startup-probe
      name: driver-startup-probe-script
    - name: kube-api-access-492bt
      projected:
        defaultMode: 420
        sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              items:
                - key: ca.crt
                  path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
status:
  conditions:
    - lastProbeTime: null
      lastTransitionTime: "2026-06-19T11:58:51Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2026-06-19T11:58:58Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2026-06-19T12:03:31Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2026-06-19T12:03:31Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2026-06-19T11:58:49Z"
      status: "True"
      type: PodScheduled
  containerStatuses:
    - containerID: containerd://b2468c900ab7236c7838db243c3de9fac6a905026372658cffd2196d558fa9d8
      image: docker.io/lanzhiwang/nvidia-driver:sha-e449816
      imageID: docker.io/lanzhiwang/nvidia-driver@sha256:91299a4ecea61d57edb4cc1a0195ca6a425a0d904f55d4ed47a257afe6b41834
      lastState: {}
      name: nvidia-driver-ctr
      ready: true
      resources: {}
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2026-06-19T11:58:59Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
            - 0
          uid: 0
      volumeMounts:
        - mountPath: /run/nvidia
          name: run-nvidia
        - mountPath: /run/nvidia-fabricmanager
          name: run-nvidia-fabricmanager
        - mountPath: /run/nvidia-topologyd
          name: run-nvidia-topologyd
        - mountPath: /var/log
          name: var-log
        - mountPath: /dev/log
          name: dev-log
        - mountPath: /host-etc/os-release
          name: host-os-release
          readOnly: true
          recursiveReadOnly: Disabled
        - mountPath: /run/mellanox/drivers/usr/src
          name: mlnx-ofed-usr-src
        - mountPath: /run/mellanox/drivers
          name: run-mellanox-drivers
        - mountPath: /sys/devices/system/memory/auto_online_blocks
          name: sysfs-memory-online
        - mountPath: /sys/module/firmware_class/parameters/path
          name: firmware-search-path
        - mountPath: /lib/firmware
          name: nv-firmware
        - mountPath: /usr/local/bin/startup-probe.sh
          name: driver-startup-probe-script
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-492bt
          readOnly: true
          recursiveReadOnly: Disabled
  hostIP: 172.16.10.98
  hostIPs:
    - ip: 172.16.10.98
  initContainerStatuses:
    - containerID: containerd://1287ccf3f108edfd1b25a0bba7ec2df07869834abc3518430cb11efe6b7b1228
      image: nvcr.io/nvidia/cloud-native/k8s-driver-manager:v0.11.0
      imageID: nvcr.io/nvidia/cloud-native/k8s-driver-manager@sha256:8aec215a8b159b0162b55e688065efd58ebfa848ebc999c1797221686ff1243d
      lastState: {}
      name: k8s-driver-manager
      ready: true
      resources: {}
      restartCount: 0
      started: false
      state:
        terminated:
          containerID: containerd://1287ccf3f108edfd1b25a0bba7ec2df07869834abc3518430cb11efe6b7b1228
          exitCode: 0
          finishedAt: "2026-06-19T11:58:58Z"
          reason: Completed
          startedAt: "2026-06-19T11:58:51Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
            - 0
          uid: 0
      volumeMounts:
        - mountPath: /run/nvidia
          name: run-nvidia
        - mountPath: /host
          name: host-root
          readOnly: true
          recursiveReadOnly: Disabled
        - mountPath: /sys
          name: host-sys
        - mountPath: /run/mellanox/drivers
          name: run-mellanox-drivers
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-492bt
          readOnly: true
          recursiveReadOnly: Disabled
  phase: Running
  podIP: 10.40.216.75
  podIPs:
    - ip: 10.40.216.75
  qosClass: BestEffort
  startTime: "2026-06-19T11:58:49Z"
